[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "scanner-cli"
version = "1.0.2"
description = "CLI tool to read barcodes via stdin and route them to REST endpoints based on configurable modes."
readme = "README.md"
authors = [{ name = "Passlick Development", email = "hello@passlickdev.com" }]
license = "AGPL-3.0-only"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0", "httpx>=0.27.0", "rich>=13.7.0"]

[project.urls]
Homepage = "https://passlickdev.com"
Repository = "https://github.com/passlickdev/scanner-cli"
Issues = "https://github.com/passlickdev/scanner-cli/issues"

[project.scripts]
scanner-cli = "scanner_cli.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["scanner_cli*"]

[tool.black]
line-length = 100

[tool.isort]
profile = "black"
